fixed issues with content going off screen when window height is smaller than content height

--- a/src/UI/Board/Board.css
+++ b/src/UI/Board/Board.css
@@ -6,12 +6,6 @@
     white-space: nowrap;
 }
 
-@media s(max-width: 320px) {
-    .board {
-        padding: 0.6em;
-    }
-}
-
 @media (max-width: 768px) {
     .board {
         padding: 0.3em;
