--- a/src/UI/GameRootComponent.css
+++ b/src/UI/GameRootComponent.css
@@ -1,10 +1,6 @@
 
 #game-content {
     display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
 }
 
