--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,10 @@ h3 {
     height: 100%;
     margin: 0;
     padding: 0;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: min-content; 
 }
 
 @media (max-width: 768px) {
